<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.51">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <Button
                    android:id="@+id/button7"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_7"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="42dp"
                    tools:layout_editor_absoluteY="390dp" />

                <Button
                    android:id="@+id/button8"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_8"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="148dp"
                    tools:layout_editor_absoluteY="351dp" />

                <Button
                    android:id="@+id/button9"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_9"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="236dp"
                    tools:layout_editor_absoluteY="351dp" />

                <Button
                    android:id="@+id/buttonDiv"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/divide"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="388dp"
                    tools:layout_editor_absoluteY="337dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button4"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="89dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_4"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="42dp"
                    tools:layout_editor_absoluteY="438dp" />

                <Button
                    android:id="@+id/button5"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="175dp"
                    tools:layout_editor_absoluteY="438dp" />

                <Button
                    android:id="@+id/button6"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_6"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="244dp"
                    tools:layout_editor_absoluteY="438dp" />

                <Button
                    android:id="@+id/buttonMulti"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/multi"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="342dp"
                    tools:layout_editor_absoluteY="403dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button1"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="42dp"
                    tools:layout_editor_absoluteY="486dp" />

                <Button
                    android:id="@+id/button2"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="175dp"
                    tools:layout_editor_absoluteY="569dp" />

                <Button
                    android:id="@+id/button3"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_3"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="244dp"
                    tools:layout_editor_absoluteY="490dp" />

                <Button
                    android:id="@+id/buttonMinus"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minus"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="342dp"
                    tools:layout_editor_absoluteY="464dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button0"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="42dp"
                    tools:layout_editor_absoluteY="534dp" />

                <Button
                    android:id="@+id/buttonComma"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comma"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="156dp"
                    tools:layout_editor_absoluteY="506dp" />

                <Button
                    android:id="@+id/buttonEqual"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/equal"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="244dp"
                    tools:layout_editor_absoluteY="558dp" />

                <Button
                    android:id="@+id/buttonPlus"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/plus"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="351dp"
                    tools:layout_editor_absoluteY="586dp" />

            </TableRow>

            <TableRow
                android:layout_width="450dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonCA"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clearAll"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/buttonDelete"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="42dp"
                    tools:layout_editor_absoluteY="582dp" />

                <Button
                    android:id="@+id/buttonLeftBracket"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/leftBra"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/buttonRightBracket"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:text="@string/rightBra"
                    android:textAlignment="center"
                    android:textSize="24sp" />

            </TableRow>

        </TableLayout>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="228dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewData"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/data"
            android:cursorVisible="true"
            android:editable="true"
            android:isScrollContainer="true"
            android:scrollbars="vertical"
            android:textAlignment="textEnd"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/textViewResult"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/result"
            android:editable="true"
            android:textAlignment="textEnd"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>